# stegotorus

./: .gitignore  .gitmodules  BUG  Doxyfile  LICENSE  Makefile.am  Makefile.am.orig  README  README.Linda  README.md  TAGS  autogen.sh  configure.ac  curl_test.sh  g_unittests  libboost.pc  modus_operandi.cc  pgen_fake  pgen_pcap  run-autogen.csh  setup_st_client.sh  setup_st_server.sh  setup_stegotorus.sh  start-client.csh  start-obfsproxy.sh  start-server.csh
conf.d/: chop-http-apache-client.yaml  chop-http-apache-server-st-bridge.yaml  chop-http-apache-server.yaml  chop-http-trace-client.yaml  chop-http-trace-server.yaml  chop-nosteg-client.yaml  chop-nosteg-rr-client.yaml  chop-nosteg-rr-server.yaml  chop-nosteg-server.yaml
config-aux/: cxx_static_assert.m4  cxxflags_stdcxx_11.m4  ranlib.m4  winsock.m4
doc/: HACKING  NOTES  NOTES.Linda  README.Linda  TESTING  THREAT_MODEL  THREAT_MODEL_PHILOSOPHICAL  TODO  all_news_20131227.txt  check_for_memory_leak.txt  compiling-on-ubuntu.txt  config_doc.txt  dos_messures.sage  guide_to_chop.txt  handshake.txt  how_a_connection_get_close.txt  how_to_debug_with_emacs.txt  how_to_srcape_covers.txt  how_to_test_an_stegfile_type_with_http_steg_module.txt  http_apache_module.txt  issues.txt  obfs2_threat_model.txt  obfsproxy_architecture.txt  protocol-spec.txt  stegotorus_developer_guide.md  stegotorus_user_guide.md  tor-obfs-howto.txt  tor-st-howto.txt  writing_new_file_steg_mod_for_http_steg.txt
doc/building_tbb/: how_to_tbb.txt
doc/obfs2/howto/: README  client-external-howto.txt  client-managed-howto.txt  server-external-howto.txt  server-managed-howto.txt
m4/: cxx_delete_method.m4  cxxflags_stdcxx_11.m4  cxxminuso.m4  maintainer.m4  system_extensions.m4  winsock.m4
modus_operandi/: client-local-config.conf  client-local-mitm.conf  client-nosteg-local.conf  client-null-local.conf  client-stream.conf  client-vm05-config.conf  client-vm06-config.conf  server-http.conf  server-local-config.conf  server-nosteg-local.conf  server-null-local.conf  server-stream.conf  server-vm05-config.conf  server-vm06-config.conf  start-client-local  start-client-vm06  start-server-local  start-server-vm05  start-server-vm06  tbb-client-config-linux.conf  tbb-client-config-mac.conf  tbb-client-config-windows.conf
scripts/: benchmark-plot.R  benchmark.py  bm-fixedrate-cgi.c  bm-genfiles.py  bm-mcurl.c  bm-tor-controller.py  build-all-os.sh  build-android.sh  build-linux.sh  build-windows.sh  output_file  start-client.csh  start-obfsproxy.sh  start-server.csh  start-stegotorus.sh  tarify_release.py  tool_urlglob.c  tool_urlglob.h  torrc
scripts/test_scripts/: setup_stegodrop.sh  setup_stegohttp.sh  setup_stegotorus.sh  setup_stegotorus_no_log.sh
src/: audit-globals.sh  base64.cc  base64.h  compression.cc  compression.h  connections.c  connections.cc  connections.h  container.c  container.h  cpp.h  crc32.cc  crc32.h  crypt.c  crypt.cc  crypt.h  crypt_protocol.c  crypt_protocol.h  curl_util.cc  curl_util.h  evbuf_util.cc  evbuf_util.h  external.c  external.h  genmodtable.sh  ht.h  listener.h  main.c  main.cc  main.h  managed.c  managed.h  mkem.cc  mkem.h  module.c  module.h  modus_operandi.cc  modus_operandi.h  network.c  network.cc  (+34 more)
src/http_parser/: http_parser.cc
src/plugins/: dummy.c  dummy.h  obfs2.c  obfs2.h  obfs2_crypt.h
src/protocol/: chop.c  chop.cc  chop.cc.orig  chop_blk.cc  chop_blk.h  chop_circuit.h  chop_config.cc  chop_config.h  chop_conn.cc  chop_conn.h  chop_handshaker.h  null.cc  transparent_circuit.h  x_null.c  x_null.cc
src/protocol/elligator/: elligator.cc  elligator.h
src/protocols/: chop.c  dummy.c  dummy.h  obfs2.c  obfs2.h  obfs2_crypt.c  obfs2_crypt.h  roundrobin.c  x_dsteg.c  x_dsteg.h  x_rr.c
src/steg/: apache_payload_server.cc  apache_payload_server.cc.orig  apache_payload_server.h  b64cookies.cc  b64cookies.h  b64decode.cc  b64decode.h  b64encode.cc  b64encode.h  cookies.c  cookies.cc  cookies.h  crc32.c  crc32.cc  crc32.h  dummy.cc  dummy_rr.cc  embed.cc  http.cc  http.cc.orig  http.h  http_apache.cc  http_trace.cc  jpgSteg.cc  jpgSteg.h  jsSteg.c  jsSteg.cc  jsSteg.h  nosteg.cc  nosteg_rr.cc  null.cc  null_rr.cc  payload_lru_cache.h  payload_scraper.cc  payload_scraper.cc.orig  payload_scraper.h  payload_server.cc  payload_server.h  payloads.c  payloads.cc  (+18 more)
src/steg/http_steg_mods/: file_steg.cc  file_steg.h  gifSteg.cc  gifSteg.h  htmlSteg.cc  htmlSteg.h  jpgSteg.cc  jpgSteg.h  jsSteg.cc  jsSteg.h  pdfSteg.cc  pdfSteg.h  pngSteg.cc  pngSteg.h  swfSteg.cc  swfSteg.h
src/test/: genunitgrps.sh  itestlib.py  jpeg_steg_test.cc  obfstestlib.py  test_config.py  test_endtoend.py  test_http_server.py  test_socks.py  test_socks_unsupported.py  test_tl.py  tester.py  tester.py.in  tinytest.c  tinytest.cc  tinytest.h  tinytest_macros.h  tl_oneway_c2s  tl_oneway_s2c  tl_snark  tltester.c  tltester.cc  unittest.c  unittest.cc  unittest.h  unittest_JScapacity.cc  unittest_base64.cc  unittest_compression.cc  unittest_config.c  unittest_config.cc  unittest_container.c  unittest_crypt.c  unittest_crypt.cc  unittest_dummy.c  unittest_obfs2.c  unittest_pdfsteg.cc  unittest_protocol.c  unittest_socks.c  unittest_socks.cc  unittest_steg_x_http.c  unittest_transfer.c  (+4 more)
src/test/gtest/: gtest_main.cc
src/test/integration_test/: alpha  int_test.sh
src/test/nvwa_leak_detector/: test.cpp
src/test/steg_test/: payload_scraper_unittest.cc  pngSteg_unittest.cc  stegMod_unittest.cc  steg_mod_unittest.cc  test1.html  test1_synthetic.js  test2.html  test3.html  test4.html  unittest_JScapacity.cc  zone.swf
src/test/test_conf.d/: chop-http-apache-client-server.yaml  chop-http-client-server.yaml  chop-http-trace-client-html-only.yaml  chop-http-trace-client-js-only.yaml  chop-http-trace-client.yaml  chop-http-trace-server-html-only.yaml  chop-http-trace-server-js-only.yaml  chop-http-trace-server.yaml  chop-nosteg-client-server.yaml  null-client-server.yaml  (+2 more)
tmp/: proxy_out.txt  server_out.txt
tools/: copy_all.py  list_of_file.txt
tor_browser_bundle/: start-tor-browser
tor_browser_bundle/Lib/: libconfig++.so.9  libcurl.so.4.2.0
(+26 files in other folders)
